--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         </nav>
         <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
             <a href="#" class="siteheader__logo">
-                <img src="images/logo.svg" alt="Elysian" />
+                <img src="images/logorose.svg" alt="Elysian" />
             </a>
             <nav class="siteheader__nav">
                 <ul class="menu menu--main">
@@ -47,10 +47,10 @@
             </figure>
         </section>
 
-        <section id="service" class="service swrap swrap--light">
+        <section id="service" class="servicea swrap swrap--light">
             <div class="">
                 <h2 class="nicetitle">
-                    Sminktetováló stúdió Budán exclusive környezetben
+                    Sminktetováló stúdió Budán
                     <em>Tökéletesség, boldogság és harmónia.</em>
                 </h2>
                 <div class="lead">
@@ -74,8 +74,22 @@
                 </div>
             </div>
         </section>
+        <!-- <div class="service swrap aswrap--dark ">
+            <h2 class="nicetitle">
+                Szépülni szeretnél?
+                <em>Ismerd meg szolgáltatásainkat</em>
+            </h2>
+            <div class="lead">
+                <p>
+                    Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. Oly módon, hogy a
+                    természetes szépséged emeli ki. A sminktetoválás megfelel ennek az álomnak. Ez
+                    nem csak azoknak ideális megoldás, akik reggel sietnek, hanem a szemüveget
+                    viselőknek vagy azoknak is, akik tartósan szeretnének elrejteni egy szépséghibát.
+                </p>
+            </div>
+        </div> -->
         <section id="slister" class="slister">
-            <div class="servicelist">
+            <div id="servicelist" class="servicelist">
                 <div class="servicecard">
                     <h3 class="servicecard__title">
                         Szemöldök tetoválás<em>Csodálatos formáért</em>
@@ -118,7 +132,7 @@
             </div>
         </section>
 
-        <section id="bio" class="bio swrap">
+        <section id="bio" class="bio swrap aswrap--narrow">
             <figure class="bio__foto">
                 <img src="https://source.unsplash.com/random/800x800/?headshot" alt="" />
                 <figcaption>
@@ -127,8 +141,8 @@
                 </figcaption>
             </figure>
             <div class="bio__content">
-                <h2 class="nicetitle">Bemutatkozás <em>Ismerd meg a stúdióvezetőt</em></h2>
-                <div class="lead">
+                <!-- <h2 class="nicetitle">Bemutatkozás <em>Ismerd meg a stúdióvezetőt</em></h2> -->
+                <div class="alead">
                     <p>
                         Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként
                         életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a
@@ -184,9 +198,7 @@
                             Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom, hogy a
                             sminkem tökéletes Imádom a szám, a szemöldököm, és a szememet is.
                             Köszönöm. Most voltam Nálad harmadszorra, és megdöbbente, hogy se a szám,
-                            se a szemöldökém, se a szememnél nem éreztem fájdalmat, szuper vagy. .a,d
-                            a.dm fasdkfjh ashdf lasdhf lasdjfk ahsdkfh klashdfk haksdh kashdf kahsdfk
-                            adkfh akhs
+                            se a szemöldökém, se a szememnél nem éreztem fájdalmat, szuper vagy.
                         </p>
                         <cite>
                             <img src="//source.unsplash.com/random/202x202/?headshot" alt="" />
@@ -207,19 +219,16 @@
                 <a href="#" class="btn abtn--inverse">Tudnivalók újaknak</a>
             </div>
         </section>
-        <footer class="sitefooter swrap swrap--full swrap--narrow swrap--dark">
+        <footer class="sitefooter swrap aswrap--full swrap--narrow swrap--dark">
             <div class="sitefooter__section">
-                <h3>Elysian Beauty Kft.</h3>
                 <ul>
+                    <li><strong>Elysian Beauty Kft.</strong></li>
                     <li>Cégj. sz.: 9688412-23-561</li>
                     <li>
-                        H-1013 Budapest<br />
-                        Pauler utca 15.
+                        H-1013 Budapest, Pauler utca 15.
                     </li>
                     <li>
-                        <a href="tel:+36702996999">+36 70 299 6999</a>
-                    </li>
-                    <li>
+                        <a href="tel:+36702996999">+36 70 299 6999</a> |
                         <a href="mailto:studio@elysianbeauty.hu">
                             studio@elysianbeauty.hu
                         </a>
@@ -230,8 +239,12 @@
                 <ul class="menu menu--vert">
                     <li><a href="#">Adatkezelési irányelvek</a></li>
                     <li><a href="#">Jogi nyilatkozat</a></li>
+                    <li>Site by <a href="#">Hydrogene</a></li>
                 </ul>
             </div>
+            <a href="#" class="siteheader__logo">
+                <img src="images/logorose.svg" alt="Elysian" />
+            </a>
         </footer>
     </body>
 </html>
