--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,22 @@
         <nav class="subnav">
             <!-- <h3>Sminktetoválás</h3> -->
             <ul class="menu menu--submenu">
-                <li><a href="#">Sminketeoválás</a></li>
-                <li><a href="#">Szemöldök</a></li>
-                <li><a href="#">Szemhéj</a></li>
-                <li><a href="#">Száj</a></li>
+                <li><a href="/">Sminketeoválás</a></li>
+                <li><a href="szemoldok.html">Szemöldök</a></li>
+                <li><a href="szemhely.html">Szemhéj</a></li>
+                <li><a href="szaj.html">Száj</a></li>
             </ul>
         </nav>
         <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
-            <a href="#" class="siteheader__logo">
+            <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
             <nav class="siteheader__nav">
                 <ul class="menu menu--main">
-                    <li class="is-active"><a href="#">Stúdió</a></li>
-                    <li><a href="#">Árak</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Kapcsolat</a></li>
+                    <li class="is-active"><a href="/">Stúdió</a></li>
+                    <li><a href="prices.html">Árak</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
             </nav>
             <!-- <div class="siteheader__section">
@@ -47,7 +47,7 @@
             </figure>
         </section>
 
-        <section id="service" class="servicea swrap swrap--light">
+        <section id="service" class="afeles swrap swrap--light">
             <div class="">
                 <h2 class="nicetitle">
                     Sminktetováló stúdió Budán
