--- a/src/faq.html
+++ b/src/faq.html
@@ -23,8 +23,8 @@
                 <ul class="menu menu--main">
                     <li><a href="/">Stúdió</a></li>
                     <li><a href="prices.html">Árak</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li class="is-active"><a href="contact.html">Kapcsolat</a></li>
+                    <li class="is-active"><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
             </nav>
             <!-- <div class="siteheader__section">
@@ -33,51 +33,36 @@
                 </a>
             </div> -->
         </header>
-        <section class="hero hero--light">
-            <div class="hero__content">
-                <h1 class="hero__title">Érdeklődj és foglalj időpontot sminktetoválásra</h1>
-                <!-- <p>Elérhetőségeink az alábbiak</p> -->
-                <p>
-                    Telefon: <a href="tel:+36702996999">+36 70 299 6999</a><br />
-                    E-mail:
-                    <a href="mailto:studio@elysianbeauty.hu">
-                        studio@elysianbeauty.hu
-                    </a>
-                </p>
-                <a href="#" class="fauxbtn">Nyitvatartás</a>
-            </div>
-            <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x800/?beauty,makeup" alt="" />
-            </figure>
-        </section>
         <main role="main">
             <div class="swrap felezett">
                 <div class="">
-                    <h2>Üzlet címe</h2>
-                    <p>
-                        <strong>Elysian Beauty Kft.</strong><br />
-                        H-1013 Budapest<br />Pauler utca 15. | <a href="#">térkép</a>
-                    </p>
-                    <p>
-                        Tel: <a href="tel:+36702996999">+36 70 299 6999</a><br />
-                        E-mail:
-                        <a href="mailto:studio@elysianbeauty.hu">
-                            studio@elysianbeauty.hu
-                        </a>
+                    <h2>Lorem ipsum dolor sit.</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nam placeat
+                        numquam, earum totam commodi, explicabo quas ab ipsum voluptatem molestiae
+                        incidunt sit. Temporibus nihil ut cumque ducimus sit officia.
                     </p>
 
                     <p>
-                        <strong>Tömegközlekedés és parkolás</strong><br />
-                        Autóval a Pauler utcába a behajtás a Krisztina körút felöl a Roham utcán
-                        keresztül lehetséges. Az üzlet elött az utcan lehet parkolni (fizetös zóna).
-                        Tömegközlekedéssel a Déli pályaudvarról, A Krisztina tértöl és az Alagút
-                        úttól 5 perc sétára található az üzlet.
+                        Praesentium, eveniet saepe accusantium recusandae, qui deserunt rem ad ex
+                        maxime architecto eius pariatur harum est suscipit. Lorem ipsum dolor sit
+                        amet consectetur adipisicing elit. Rerum quos aspernatur, iusto dolorum
+                        eligendi reprehenderit incidunt modi veritatis voluptas provident dolorem
+                        doloremque iure dolore exercitationem et aliquam distinctio porro architecto?
                     </p>
                 </div>
                 <div class="">
-                    <h2>Nyitvatartás</h2>
-                    <p><strong>Hétfő, Szerda, Péntek:</strong><br />09.00-17.00</p>
-                    <p><strong>Kedd, Csütörtök:</strong><br />12.00-20.00</p>
+                    <p class="lead">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum
+                        cupiditate molestias ab dignissimos. Iste, repellendus neque alias amet a
+                        magni eveniet labore dolore aliquam, debitis quia commodi suscipit ad
+                        voluptates.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veniam
+                        ea ad excepturi voluptas earum sed repellat consectetur quibusdam. Itaque,
+                        debitis!
+                    </p>
                 </div>
             </div>
         </main>
