--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
                     <li>Site by <a href="#">Hydrogene</a></li>
                 </ul>
             </div>
-            <a href="#" class="siteheader__logo">
+            <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
         </footer>
