--- a/src/index.html
+++ b/src/index.html
@@ -47,47 +47,24 @@
             </figure>
         </section>
 
-        <section id="service" class="afeles swrap swrap--light">
+        <section id="service" class="swrap swrap--light text-center swrap--nobtm afeles">
             <div class="">
                 <h2 class="nicetitle">
-                    Sminktetováló stúdió Budán
-                    <em>Tökéletesség, boldogság és harmónia.</em>
+                    Természetes hatású sminktetoválás
+                    <em>Ismerd meg a stúdiónk szolgáltatásait</em>
                 </h2>
-                <div class="lead">
+                <div class="lead lead--accent">
                     <p>
-                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. Oly módon, hogy a
-                        természetes szépséged emeli ki. A sminktetoválás megfelel ennek az álomnak.
-                        Ez nem csak azoknak ideális megoldás, akik reggel sietnek, hanem a szemüveget
-                        viselőknek vagy azoknak is, akik tartósan szeretnének elrejteni egy
+                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. Ez az álom
+                        könnyedén elérhető. A sminktetoválás a természetes szépséged emeli ki.
+                        Ideális megoldás azoknak akik reggel sietnek. Ajánlott még szemüveget
+                        viselőknek és azoknak akik tartósan szeretnének elrejteni egy-egy
                         szépséghibát.
-                    </p>
-                    <p>
-                        Vendégeink arcvonásaival maximálisan harmonizáló sminktetoválásokat
-                        készítünk, a személyiség jegyek és az egyedi vonások megtartásával.
-                        Tökéletességre törekszünk, hogy minden kedves hölgyvendégünk boldogan és
-                        elégedetten viselje munkánk gyümölcsét.
-                    </p>
-
-                    <p>
-                        <a href="#" class="fauxbtn">nézz körül (fotók a stúdióról)</a>
                     </p>
                 </div>
             </div>
         </section>
-        <!-- <div class="service swrap aswrap--dark ">
-            <h2 class="nicetitle">
-                Szépülni szeretnél?
-                <em>Ismerd meg szolgáltatásainkat</em>
-            </h2>
-            <div class="lead">
-                <p>
-                    Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. Oly módon, hogy a
-                    természetes szépséged emeli ki. A sminktetoválás megfelel ennek az álomnak. Ez
-                    nem csak azoknak ideális megoldás, akik reggel sietnek, hanem a szemüveget
-                    viselőknek vagy azoknak is, akik tartósan szeretnének elrejteni egy szépséghibát.
-                </p>
-            </div>
-        </div> -->
+
         <section id="slister" class="slister">
             <div id="servicelist" class="servicelist">
                 <div class="servicecard">
@@ -128,6 +105,26 @@
                         bátran, vagy sportolhatsz és még csókálló is!
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Szolgáltatás részletei</a>
+                </div>
+            </div>
+        </section>
+        <section id="service" class="afeles swrap aswrap--dark">
+            <div class="">
+                <h2 class="nicetitle">
+                    Sminktetováló szalon Budán
+                    <em>Tökéletesség, boldogság és harmónia.</em>
+                </h2>
+                <div class="lead">
+                    <p>
+                        Vendégeink arcvonásaival maximálisan harmonizáló sminktetoválásokat
+                        készítünk, a személyiség jegyek és az egyedi vonások megtartásával.
+                        Tökéletességre törekszünk, hogy minden kedves hölgyvendégünk boldogan és
+                        elégedetten viselje munkánk gyümölcsét.
+                    </p>
+
+                    <p>
+                        <a href="#" class="fauxbtn">nézz körül (fotók a stúdióról)</a>
+                    </p>
                 </div>
             </div>
         </section>
