--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,9 @@
             </figure>
         </section>
 
-        <section id="service" class="swrap swrap--light text-center swrap--nobtm afeles">
+        <section id="service" class="swrap swrap--dark text-center swrap--nobtm afeles">
             <div class="">
-                <h2 class="nicetitle">
+                <h2 class="nicetitle nicetitle--accent">
                     Természetes hatású sminktetoválás
                     <em>Ismerd meg a stúdiónk szolgáltatásait</em>
                 </h2>
