--- a/src/contact.html
+++ b/src/contact.html
@@ -15,7 +15,7 @@
                 <li><a href="szaj.html">Száj</a></li>
             </ul>
         </nav>
-        <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
+        <header class="siteheader siteheader--dark swrap swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
@@ -33,11 +33,11 @@
                 </a>
             </div> -->
         </header>
-        <section class="hero hero--light">
+        <section class="hero hero--notop hero--dark">
             <div class="hero__content">
                 <h1 class="hero__title">Érdeklődj és foglalj időpontot sminktetoválásra</h1>
                 <!-- <p>Elérhetőségeink az alábbiak</p> -->
-                <p>
+                <p class="hero__lead">
                     Telefon: <a href="tel:+36702996999">+36 70 299 6999</a><br />
                     E-mail:
                     <a href="mailto:studio@elysianbeauty.hu">
@@ -51,7 +51,7 @@
             </figure>
         </section>
         <main role="main">
-            <div class="swrap felezett">
+            <div class="swrap swrap--light felezett">
                 <div class="">
                     <h2>Üzlet címe</h2>
                     <p>
