--- a/src/faq.html
+++ b/src/faq.html
@@ -34,7 +34,7 @@
             </div> -->
         </header>
         <main role="main">
-            <div class="swrap felezett">
+            <div class="swrap swrap--light felezett">
                 <div class="">
                     <h2>Lorem ipsum dolor sit.</h2>
                     <p class="lead">
