--- a/src/index.html
+++ b/src/index.html
@@ -34,24 +34,24 @@
             </div> -->
         </header>
 
-        <section class="hero">
+        <section class="hero hero--notop">
             <div class="hero__content">
                 <h1 class="hero__title">Ébredj tökéletes sminkben minden reggel</h1>
-                <p>
+                <p class="hero__lead">
                     Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválás.
                 </p>
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
             <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x800/?beauty,makeup" alt="" />
+                <img src="https://source.unsplash.com/random/1200x900/?beauty,makeup" alt="" />
             </figure>
         </section>
 
-        <section id="service" class="swrap swrap--dark text-center swrap--nobtm afeles">
+        <section id="service" class="swrap swrap--dark atext-center aswrap--nobtm afeles">
             <div class="">
                 <h2 class="nicetitle nicetitle--accent">
                     Természetes hatású sminktetoválás
-                    <em>Ismerd meg a stúdiónk szolgáltatásait</em>
+                    <em>Tokéletesség, boldogság, harmónia</em>
                 </h2>
                 <div class="lead lead--accent">
                     <p>
@@ -66,7 +66,11 @@
         </section>
 
         <section id="slister" class="slister">
-            <div id="servicelist" class="servicelist">
+            <!-- <div class="swrap swrap--nobtm">
+                <h2 class="nicetitle nicetitle--accent">Stúdiónk szolgáltatásai</h2>
+                <br />
+            </div> -->
+            <div id="servicelist" class="servicelist swrap aswrap--notop">
                 <div class="servicecard">
                     <h3 class="servicecard__title">
                         Szemöldök tetoválás<em>Csodálatos formáért</em>
@@ -108,103 +112,97 @@
                 </div>
             </div>
         </section>
-        <section id="service" class="afeles swrap aswrap--dark">
-            <div class="">
-                <h2 class="nicetitle">
-                    Sminktetováló szalon Budán
-                    <em>Tökéletesség, boldogság és harmónia.</em>
-                </h2>
-                <div class="lead">
-                    <p>
-                        Vendégeink arcvonásaival maximálisan harmonizáló sminktetoválásokat
-                        készítünk, a személyiség jegyek és az egyedi vonások megtartásával.
-                        Tökéletességre törekszünk, hogy minden kedves hölgyvendégünk boldogan és
-                        elégedetten viselje munkánk gyümölcsét.
-                    </p>
 
-                    <p>
-                        <a href="#" class="fauxbtn">nézz körül (fotók a stúdióról)</a>
-                    </p>
-                </div>
+        <section class="hero hero--swap hero--dark">
+            <div class="hero__content">
+                <h2 class="hero__title">Jónás Diána <aem>Sminktetováló művész</aem></h2>
+                <p class="hero__lead">
+                    Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik munkája
+                    gyümölcsét.
+                </p>
+                <!-- <p>
+                    Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve
+                    magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban
+                    ezzel fog foglalkozni.
+                </p>
+                <p>
+                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
+                    tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Négy év
+                    gyakorlat után jött el az idő, hogy saját szalont nyisson.
+                </p> -->
+                <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
+                <a href="#" class="fauxbtn">Nézz körül a stúdióban</a>
             </div>
-        </section>
-
-        <section id="bio" class="bio swrap aswrap--narrow">
-            <figure class="bio__foto">
-                <img src="https://source.unsplash.com/random/800x800/?headshot" alt="" />
-                <figcaption>
-                    Jónás Diána
-                    <em>Sminktetováló művész</em>
-                </figcaption>
+            <figure class="hero__fig">
+                <img src="https://source.unsplash.com/random/1200x1000/?portraiture" alt="" />
             </figure>
-            <div class="bio__content">
-                <!-- <h2 class="nicetitle">Bemutatkozás <em>Ismerd meg a stúdióvezetőt</em></h2> -->
-                <div class="alead">
-                    <p>
-                        Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként
-                        életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a
-                        sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban ezzel fog
-                        foglalkozni.
-                    </p>
-                    <p>
-                        A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
-                        tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Több mint
-                        4 év gyakorlat után jött el az idő, hogy Dia saját szalont nyittott.
-                    </p>
-                    <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
-                </div>
-            </div>
         </section>
 
-        <section id="testimoinals" class="swrap swrap--dark">
-            <ul class="testilist">
-                <li>
-                    <blockquote class="testicard">
-                        <p>
-                            Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha valaki
-                            elrontja az arcodat, nincs fájdalom!!!! Kedves, őszinte lány és nagyon
-                            hangulatos kis helye van, ahol igazán le lehet ereszteni, amíg ott vagy.
-                            Imádom
-                        </p>
-                        <cite>
-                            <img src="//source.unsplash.com/random/200x200/?portraiture" alt="" />
-                            Kling Szandra
-                            <span>Teljes generál 2 évente</span></cite
-                        >
-                    </blockquote>
-                </li>
-                <li>
-                    <blockquote class="testicard">
-                        <p>
-                            Dia egy nagyon figyelmes, igényes és körültekintő sminktetováló.
-                            Rendkívül figyel a vendége igényeire. Én is és édesanyám is nagy örömmel
-                            viseljük az esztétikus és ízléses munkája eredményét. Ez úton is
-                            szeretném megköszönni neki és mindenkinek nyugodt szívvel ajánlani.
-                        </p>
-                        <cite>
-                            <img src="//source.unsplash.com/random/200x200/?headshot" alt="" />
-                            Nagy Bianka
-                            <span>Visszatérő vendég</span></cite
-                        >
-                    </blockquote>
-                </li>
-                <li>
-                    <blockquote class="testicard">
-                        <p>
-                            Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat.
-                            Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom, hogy a
-                            sminkem tökéletes Imádom a szám, a szemöldököm, és a szememet is.
-                            Köszönöm. Most voltam Nálad harmadszorra, és megdöbbente, hogy se a szám,
-                            se a szemöldökém, se a szememnél nem éreztem fájdalmat, szuper vagy.
-                        </p>
-                        <cite>
-                            <img src="//source.unsplash.com/random/202x202/?headshot" alt="" />
-                            Patik Marta
-                            <span>3 éve szájtetováltat</span></cite
-                        >
-                    </blockquote>
-                </li>
-            </ul>
+        <section id="testimonials" class="swrap swrap--light">
+            <div class="glide" style="width:100%; max-width: 1200px; margin:0 auto;">
+                <div class="glide__track" data-glide-el="track">
+                    <ul class="glide__slides">
+                        <li class="glide__slide">
+                            <blockquote class="testicard">
+                                <p>
+                                    Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha
+                                    valaki elrontja az arcodat, nincs fájdalom!!!! Kedves, őszinte
+                                    lány és nagyon hangulatos kis helye van, ahol igazán le lehet
+                                    ereszteni, amíg ott vagy. Imádom
+                                </p>
+                                <cite>
+                                    <img
+                                        src="//source.unsplash.com/random/200x200/?portraiture"
+                                        alt=""
+                                    />
+                                    Kling Szandra
+                                    <span>Teljes generál 2 évente</span></cite
+                                >
+                            </blockquote>
+                        </li>
+                        <li class="glide__slide">
+                            <blockquote class="testicard">
+                                <p>
+                                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat.
+                                    Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom,
+                                    hogy a sminkem tökéletes Imádom a szám, a szemöldököm, és a
+                                    szememet is. Köszönöm. Most voltam Nálad harmadszorra, és
+                                    megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem
+                                    éreztem fájdalmat, szuper vagy.
+                                </p>
+                                <cite>
+                                    <img
+                                        src="//source.unsplash.com/random/202x202/?headshot"
+                                        alt=""
+                                    />
+                                    Patik Marta
+                                    <span>3 éve szájtetováltat</span></cite
+                                >
+                            </blockquote>
+                        </li>
+                        <li class="glide__slide">
+                            <blockquote class="testicard">
+                                <p>
+                                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat.
+                                    Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom,
+                                    hogy a sminkem tökéletes Imádom a szám, a szemöldököm, és a
+                                    szememet is. Köszönöm. Most voltam Nálad harmadszorra, és
+                                    megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem
+                                    éreztem fájdalmat, szuper vagy.
+                                </p>
+                                <cite>
+                                    <img
+                                        src="//source.unsplash.com/random/202x202/?headshot"
+                                        alt=""
+                                    />
+                                    Patik Marta
+                                    <span>3 éve szájtetováltat</span></cite
+                                >
+                            </blockquote>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
         <section class="swrap promoblock">
             <img src="images/diadolgozik.jpg" alt="" />
