--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
 
         <section class="hero hero--swap hero--dark">
             <div class="hero__content">
-                <h2 class="hero__title">Jónás Diána <aem>Sminktetováló művész</aem></h2>
+                <h2 class="hero__title">Jónás Diána sminktetováló művész</h2>
                 <p class="hero__lead">
                     Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik munkája
                     gyümölcsét.
