--- a/src/index.html
+++ b/src/index.html
@@ -204,6 +204,34 @@
                 </div>
             </div>
         </section>
+        <section id="bio" class="bio swrap swrap--dark aswrap--narrow">
+            <figure class="bio__foto">
+                <img src="https://source.unsplash.com/random/800x800/?headshot" alt="" />
+                <!-- <figcaption>
+                    Jónás Diána
+                    <em>Sminktetováló művész</em>
+                </figcaption> -->
+            </figure>
+            <div class="bio__content">
+                <h2 class="nicetitle">Jónás Diána<em>sminktetováló művész</em></h2>
+                <p class="hero__lead">
+                    Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik munkája
+                    gyümölcsét.
+                </p>
+                <p>
+                    Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve
+                    magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban
+                    ezzel fog foglalkozni.
+                </p>
+                <p>
+                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
+                    tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Négy év
+                    gyakorlat után jött el az idő, hogy saját szalont nyisson.
+                </p>
+                <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
+                <a href="#" class="fauxbtn">Nézz körül a stúdióban</a>
+            </div>
+        </section>
         <section class="swrap promoblock">
             <img src="images/diadolgozik.jpg" alt="" />
             <div class="callout">
