--- a/src/contact.html
+++ b/src/contact.html
@@ -51,7 +51,7 @@
             </figure>
         </section>
         <main role="main">
-            <div class="swrap swrap--light felezett">
+            <div class="swrap felezett">
                 <div class="">
                     <h2>Üzlet címe</h2>
                     <p>
