--- a/src/prices.html
+++ b/src/prices.html
@@ -15,7 +15,7 @@
                 <li><a href="szaj.html">Száj</a></li>
             </ul>
         </nav>
-        <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
+        <header class="siteheader siteheader--transp swrap aswrap--dark swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
@@ -34,7 +34,7 @@
             </div> -->
         </header>
         <main role="main">
-            <div class="swrap swrap--keskeny swrap--dark">
+            <div class="swrap swrap--keskeny swrap--notop aswrap--light">
                 <div class="">
                     <section class="pricetable">
                         <header class="pricetable__head">
